<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="activity">Aktivitas</string>

    <string name="progress_message">Gambar sedang diproses.</string>
    <string name="empty_activity_message">Tidak ada data aktivitas.</string>
    <string name="no_data_message">Data tidak tersedia</string>
    <string name="timestamp_placeholder">Timestamp will be here</string>
    <string name="result_title">Result</string>
    <string name="image_description">Image description here</string>
    <string name="no_result">Tidak ada hasil.</string>
    <string name="dark_mode_icon">Dark Mode / Light Mode</string>
</resources>