<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_title"
                android:textColor="@android:color/white"
                android:padding="16dp"
                android:textSize="22sp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            android:padding="8dp"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_place_holder"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.55"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:targetApi="s" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/result"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:elevation="2dp"
            android:clipToOutline="true"
            app:layout_constraintTop_toBottomOf="@+id/result_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- New TextView for Timestamp -->
        <TextView
            android:id="@+id/timestamp_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/timestamp_placeholder"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/result_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
